# keyframing-and-simulation

./: CMakeLists.txt
animation/: animation.cpp  animation.hpp  halfedge.cpp  halfedge.hpp  numerical_methods.cpp  numerical_methods.hpp  shapes.cpp  shapes.hpp  viewer.hpp
executables/: collision_example.cpp  collision_example2.cpp  example.cpp  example2.cpp  self_collision.cpp  spring_example.cpp
src/: hw.cpp  hw.hpp
